--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -29,6 +29,223 @@
       "complications": "Осложнения",
       "postop": "Послеоперационное",
       "references": "Ссылки"
+    },
+    "mushroomPk": {
+      "title": "Mushroom PK",
+      "subtitle": "Двухкомпонентная грибовидная пенетрирующая кератопластика с микрокератомом",
+      "introduction": {
+        "title": "Введение",
+        "paragraphs": [
+          "Двухкомпонентная грибовидная пенетрирующая кератопластика (PK) с микрокератомом - это техника трансплантации роговицы, которая использует грибовидный трансплантат с большей передней ламеллой 9,0мм и меньшей задней ламеллой 6,0мм. Эта техника показана для глаз с центральными помутнениями роговицы на всю толщину, но с здоровым периферическим эндотелием.",
+          "Техника представляет собой смену парадигмы в трансплантации роговицы, устраняя критическое ограничение обычной PK: обратную зависимость между размером трансплантата и риском иммунологического отторжения. Трансплантируя только центральные 6мм эндотелия при сохранении оптической зоны 9мм, Mushroom PK сохраняет примерно 75% эндотелия реципиента.",
+          "Подход с микрокератомом включает разделение донорской роговицы на переднюю и заднюю ламеллы с использованием головки 200μм на автоматизированной системе терапевтической ламеллярной кератопластики (ALTK)."
+        ]
+      },
+      "indications": {
+        "title": "Показания и Противопоказания",
+        "indications": {
+          "title": "Показания",
+          "items": [
+            {
+              "title": "Конверсия из DALK",
+              "description": "Когда DALK не может быть завершена из-за макроперфорации DM."
+            },
+            {
+              "title": "Запущенный кератоконус",
+              "description": "Тяжелый кератоконус с центральным рубцеванием на всю толщину, не подходящий для DALK."
+            },
+            {
+              "title": "Рубцы роговицы на всю толщину",
+              "description": "Глубокое рубцевание роговицы, затрагивающее все слои, включая эндотелий."
+            },
+            {
+              "title": "Перфорации роговицы",
+              "description": "Активные или угрожающие перфорации, требующие срочного вмешательства."
+            }
+          ]
+        },
+        "contraindications": {
+          "title": "Противопоказания",
+          "absolute": {
+            "title": "Абсолютные противопоказания",
+            "items": [
+              {
+                "title": "Плотность эндотелиальных клеток <1000 клеток/мм² в периферии реципиента",
+                "description": "Здоровый периферический эндотелий обеспечивает резервуар для клеточной миграции."
+              },
+              {
+                "title": "Эндотелиальные заболевания",
+                "description": "Эти состояния требуют эндотелиальной кератопластики (DMEK/DSAEK)"
+              }
+            ]
+          }
+        }
+      },
+      "surgery": {
+        "title": "Хирургическая техника",
+        "mainTechnique": {
+          "title": "Двухкомпонентная техника Mushroom PK с микрокератомом",
+          "steps": [
+            {
+              "title": "Начальная трепанация",
+              "description": "Создание круговой инцизии 9,0мм глубиной примерно 250μм с использованием вакуум-трепана Barron, центрированного на роговице реципиента."
+            },
+            {
+              "title": "Ламеллярная диссекция",
+              "description": "Выполнение ручной ламеллярной диссекции по окружности от основания инцизии, распространяющейся примерно на 3мм к центру."
+            },
+            {
+              "title": "Центральная эксцизия",
+              "description": "Удаление рассеченной ткани, оставляя центральный островок ткани роговицы на всю толщину диаметром примерно 3мм."
+            },
+            {
+              "title": "Подготовка донора",
+              "description": "Установка донорской роговицы на искусственную переднюю камеру системы ALTK (Moria SA). Использование головки 200μм для разделения донора на переднюю и заднюю ламеллы."
+            },
+            {
+              "title": "Сборка трансплантата",
+              "description": "Установка донорского стержня (задняя ламелла с эндотелием) в центральное отверстие без швов. Размещение передней ламеллы сверху и закрепление 4 кардинальными швами нейлон 10-0."
+            },
+            {
+              "title": "Окончательное наложение швов",
+              "description": "Завершение двойным непрерывным швом нейлон 10-0 или 16 прерывистыми швами."
+            }
+          ]
+        }
+      },
+      "results": {
+        "title": "Результаты - исходы конверсии DALK в Mushroom PK",
+        "studyPopulation": {
+          "title": "Исследуемая популяция",
+          "totalProcedures": "Общее количество попыток процедур",
+          "eyesIncluded": "Глаза, включенные в анализ",
+          "meanFollowUp": "Среднее наблюдение (месяцы)"
+        },
+        "visualOutcomes": {
+          "title": "Зрительные исходы",
+          "meanBCVA1Year": "Средняя BCVA через 1 год (logMAR)",
+          "meanBCVA2Years": "Средняя BCVA через 2 года (logMAR)",
+          "meanBCVA5Years": "Средняя BCVA через 5 лет (logMAR)",
+          "eyes2040": "Глаза с ≥20/40 при последнем визите"
+        },
+        "refractiveOutcomes": {
+          "title": "Рефракционные исходы",
+          "astigmatism1Year": "Рефракционный астигматизм через 1 год",
+          "astigmatism2Years": "Рефракционный астигматизм через 2 года",
+          "astigmatism5Years": "Рефракционный астигматизм через 5 лет",
+          "eyes4D": "Глаза с ≤4D астигматизма"
+        },
+        "endothelialAnalysis": {
+          "title": "Плотность эндотелиальных клеток",
+          "preoperativeECD": "Предоперационная ECD (клетки/мм²)",
+          "ecd1Year": "ECD через 1 год (клетки/мм²)",
+          "ecd2Years": "ECD через 2 года (клетки/мм²)",
+          "ecd5Years": "ECD через 5 лет (клетки/мм²)",
+          "cellLoss5Years": "Потеря эндотелиальных клеток через 5 лет"
+        },
+        "graftSurvival": {
+          "title": "Выживаемость трансплантата",
+          "survival1Year": "Выживаемость в 1 год",
+          "survival2Years": "Выживаемость в 2 года",
+          "survival5Years": "Выживаемость в 5 лет",
+          "graftFailures": "Неудачи трансплантата",
+          "rejectionEpisodes": "Эпизоды эндотелиального отторжения"
+        },
+        "complications": {
+          "title": "Анализ осложнений",
+          "tableHeaders": {
+            "complication": "Осложнение",
+            "dalkGroup": "Группа DALK",
+            "mushroomGroup": "Группа Mushroom PK"
+          },
+          "intraoperativePerforation": "Интраоперационная макроперфорация DM",
+          "postoperativeRejection": "Послеоперационное эндотелиальное отторжение",
+          "graftFailureAll": "Неудача трансплантата (все причины)",
+          "failureDueRejection": "Неудача из-за отторжения",
+          "meanTimeFailure": "Среднее время до неудачи"
+        }
+      },
+      "complications": {
+        "title": "Осложнения",
+        "intraoperative": {
+          "title": "Интраоперационные осложнения",
+          "items": [
+            {
+              "name": "Конверсия из планированной DALK",
+              "incidence": "10-20% попыток DALK",
+              "management": "Двухкомпонентная техника Mushroom PK"
+            },
+            {
+              "name": "Проблемы, связанные с микрокератомом",
+              "incidence": "Редко при правильной технике",
+              "management": "Ручная диссекция или новая донорская ткань"
+            },
+            {
+              "name": "Неправильное положение задней ламеллы",
+              "incidence": "1-2%",
+              "management": "Осторожное репозиционирование во время операции"
+            }
+          ]
+        },
+        "postoperative": {
+          "title": "Послеоперационные осложнения",
+          "early": {
+            "title": "Ранние осложнения (< 1 месяца)",
+            "items": [
+              "Отслойка задней ламеллы",
+              "Жидкость на границе раздела",
+              "Подтекание раны",
+              "Зрачковый блок",
+              "Повышенное внутриглазное давление",
+              "Эпителиальные дефекты",
+              "Первичная неудача трансплантата"
+            ]
+          },
+          "late": {
+            "title": "Поздние осложнения (> 1 месяца)",
+            "items": [
+              "Эндотелиальное отторжение",
+              "Стромальное отторжение",
+              "Высокий астигматизм",
+              "Помутнение границы раздела",
+              "Вторичная глаукома",
+              "Расхождение раны",
+              "Прогрессивная потеря эндотелиальных клеток",
+              "Поздняя неудача трансплантата"
+            ]
+          }
+        }
+      },
+      "postoperative": {
+        "title": "Послеоперационное ведение",
+        "corticosteroids": {
+          "title": "Топические кортикостероиды",
+          "medication": "Комбинация Тобрамицин 0,3% + Дексаметазон 0,1%",
+          "dosing": [
+            "Каждые 2 часа × 2 недели",
+            "Каждые 3 часа × 2 недели",
+            "QID × 1 месяц",
+            "TID × 1 месяц",
+            "BID × 1 месяц",
+            "QD неопределенно (кроме факичных или отвечающих на стероиды)"
+          ]
+        },
+        "followUp": {
+          "title": "Программа наблюдения",
+          "schedule": [
+            "Регулярный мониторинг согласно институциональному протоколу",
+            "Подсчет эндотелиальных клеток через 6 месяцев, затем ежегодно",
+            "Топография при каждом визите после 6 месяцев"
+          ]
+        },
+        "sutureManagement": {
+          "title": "Управление швами",
+          "allSuturesRemoved": "Все швы удалены в течение 12 месяцев",
+          "earlierRemoval": "Более раннее удаление возможно из-за улучшенной стабильности раны",
+          "selectiveRemoval": "Селективное удаление на основе топографического астигматизма",
+          "noSutureBeyond": "Никаких швов после 12 месяцев"
+        }
+      }
     }
   },
   "home": {
